[package]
name = "Controller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gilrs = "0.8.1"
uinput = { path = "/home/user/CLionProjects/rust-uinput" }
#uinput = "0.1.3"
lazy_static = "1.4.0"
cached = "0.29.0"
partial_application = "0.2.1"
bitflags = "=1.2.1"
#inputbot = { path = "/home/user/CLionProjects/InputBot" }
#inputbot = { git = "https://github.com/obv-mikhail/InputBot" }