[package]
name = "Controller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#gilrs = { path = "/home/user/CLionProjects/gilrs/gilrs" }
gilrs = "0.8.2"
num-traits = "0.2.14"
#uinput = { path = "/home/user/CLionProjects/rust-uinput" }
uinput = { git = "https://github.com/positiveway/rust-uinput" }
lazy_static = "1.4.0"
bitflags = "=1.2.1"
#inputbot = { path = "/home/user/CLionProjects/InputBot" }
#inputbot = { git = "https://github.com/obv-mikhail/InputBot" }